# clara-chg-overview-3

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.sh  build_and_deploy.sh  clippy.toml
.github/workflows/: ci.yml
config/: charge_devices.dummy.yaml  charge_devices.yaml  network.yaml
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: app.rs  controls.rs  lib.rs  strip_chart.rs  util.rs  ws_client.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  commands.rs  config.rs  consts.rs  epics.rs  fe_events.rs  hardware.rs  main.rs  peak_check.rs  state.rs  ws.rs
crates/shared/: Cargo.toml
crates/shared/src/: chart.rs  config.rs  lib.rs  messages.rs
docs/: Charge-Overview-Operators-Guide.md
