[workspace]
members = ["crates/shared", "crates/server", "crates/frontend"]
default-members = ["crates/shared", "crates/server"]
resolver = "2"

# Dependencies shared across more than one crate are centralised here so their
# versions stay in lockstep. Individual crates opt in with `{ workspace = true }`.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Release builds. The native server is I/O-bound, so it gets a fast-compiling
# profile (thin LTO); the heavy size optimisations live in `wasm-release` below,
# where they shrink the *downloaded* .wasm bundle — that's what trunk builds with
# (see crates/frontend/Trunk.toml).
# NB: no `panic = "abort"` — the server relies on unwinding so a panic in one
# connection/monitor task doesn't take down the whole process.
[profile.release]
opt-level = 3
lto = "thin"
strip = true

# Frontend WASM: fat LTO + a single codegen unit + `opt-level = "s"` for the
# smallest possible bundle, at the cost of compile time.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
