[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "web_screen_reader",
    "persistence",
] }
egui = "0.31"
egui_plot = "0.31"
ewebsock = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Location", "Document"] }
log = "0.4"
