[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
# `process` is no longer needed: PV writes use the epicars native CA client rather
# than shelling out to the `caput` binary.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
# Pinned to a specific commit for reproducible builds (unpinned git deps float).
epicars = { git = "https://github.com/ndevenish/epicars.git", rev = "34d04f613286fd09fac0aa6b804996345ab194e9" }
serde = { workspace = true }
serde_json = { workspace = true }
# serde_yaml 0.9 is deprecated/unmaintained upstream; serde_norway is a maintained
# drop-in fork with the same API.
serde_norway = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
